# fastapi

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
terraform-fastapi/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  user_data.sh  variables.tf
